--- a/backend/.env
+++ b/backend/.env
@@ -1,8 +1,9 @@
-PORT=5000
-DB_HOST=localhost
+# File: .env
 DB_USER=root
+DB_HOST=localhost
+# DB_PASSWORD=
 DB_DATABASE=note_app
-#DB_PASSWORD=your_password
-JWT_SECRET=jwt123
+PORT=3000
+JWT_SECRET=your_jwt_secret_here
 JWT_EXPIRE=90d
 COOKIE_EXP=90
